--- a/.obsidian/plugins/obsidian-rtl/manifest.json
+++ b/.obsidian/plugins/obsidian-rtl/manifest.json
@@ -1,9 +1,9 @@
 {
   "id": "obsidian-rtl",
   "name": "RTL Support",
-  "version": "0.3.0",
+  "version": "1.1.1",
   "minAppVersion": "0.15.3",
-  "description": "Right to Left (RTL) text direction support for languages like Arabic, Hebrew and Farsi.",
+  "description": "Right to Left (RTL) text direction support for languages like Arabic, Hebrew and Persian (Farsi).",
   "author": "esm",
   "authorUrl": "",
   "isDesktopOnly": false
